# axians-netbox-plugin-pdu

./: .gitignore  LICENCE  README.md  pyproject.toml  tasks.py
axians_netbox_pdu/: __init__.py  choices.py  filters.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  utilities.py  views.py  worker.py
axians_netbox_pdu/api/: __init__.py  serializers.py  urls.py  views.py
axians_netbox_pdu/management/commands/: pduscheduler.py
axians_netbox_pdu/migrations/: 0001_initial.py  0002_pdustatus.py
axians_netbox_pdu/templates/axians_netbox_pdu/: device_power_usage.html  device_power_usage_3_x.html  device_type_pduconfig.html  device_type_pduconfig_3_x.html  pduconfig_edit.html  pduconfig_list.html  pduconfig_list_3_x.html  pduconfig_view.html  pduconfig_view_3_x.html  rack_power_usage.html  rack_power_usage_3_x.html
axians_netbox_pdu/tests/: __init__.py  test_pduconfig_api.py  test_pduconfig_views.py  test_pdustatus_api.py
contrib/: netbox-pdu.service
development/: Dockerfile  base_configuration.py  dev.env  docker-compose.yml
development/netbox_master/: configuration.py
development/netbox_v2.9.2/: configuration.py
